Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21510

qml code model crash

XMLWordPrintable

    • macOS
    • 4d74cbb945d53991ae844922b532987b513e14e6

      Thread 11 Crashed:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libQmlJS.4.7.83.dylib         	0x000000010f19a244 QmlJS::Context::imports(QmlJS::Document const*) const + 20
      1   libQmlJS.4.7.83.dylib         	0x000000010f19a300 QmlJS::Context::lookupType(QmlJS::Document const*, QmlJS::AST::UiQualifiedId*, QmlJS::AST::UiQualifiedId*) const + 32
      2   libQmlJS.4.7.83.dylib         	0x000000010f19a81c QmlJS::Context::lookupReference(QmlJS::Value const*) const + 220
      3   libQmlJS.4.7.83.dylib         	0x000000010f12dac8 QmlJS::PrototypeIterator::hasNext() + 168
      4   libQmlJS.4.7.83.dylib         	0x000000010f152d28 QmlJS::ScopeBuilder::setQmlScopeObject(QmlJS::AST::Node*) + 392
      5   libQmlJS.4.7.83.dylib         	0x000000010f152740 QmlJS::ScopeBuilder::push(QmlJS::AST::Node*) + 160
      6   libQmlJS.4.7.83.dylib         	0x000000010f1448da QmlJS::Check::visitQmlObject(QmlJS::AST::Node*, QmlJS::AST::UiQualifiedId*, QmlJS::AST::UiObjectInitializer*) + 3386
      7   libQmlJS.4.7.83.dylib         	0x000000010f143b91 QmlJS::Check::visit(QmlJS::AST::UiObjectDefinition*) + 17
      8   libQmlJS.4.7.83.dylib         	0x000000010f0e8d8c QmlJS::AST::UiObjectDefinition::accept0(QmlJS::AST::Visitor*) + 28
      9   libQmlJS.4.7.83.dylib         	0x000000010f0e9126 QmlJS::AST::UiObjectMemberList::accept0(QmlJS::AST::Visitor*) + 86
      10  libQmlJS.4.7.83.dylib         	0x000000010f0e8ca6 QmlJS::AST::UiProgram::accept0(QmlJS::AST::Visitor*) + 118
      11  libQmlJS.4.7.83.dylib         	0x000000010f0e649e QmlJS::AST::Node::accept(QmlJS::AST::Node*, QmlJS::AST::Visitor*) + 46
      12  libQmlJS.4.7.83.dylib         	0x000000010f1421c5 QmlJS::Check::operator()() + 101
      13  libQmlJSEditor.dylib          	0x000000010fb173f5 QmlJSEditor::Internal::SemanticInfoUpdater::makeNewSemanticInfo(QSharedPointer<QmlJS::Document const> const&, QmlJS::Snapshot const&) + 1269
      14  libQmlJSEditor.dylib          	0x000000010fb16da6 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 422
      15  org.qt-project.QtCore         	0x00000001080e3be3 QThreadPrivate::start(void*) + 323
      16  libsystem_pthread.dylib       	0x00007fff60d84661 _pthread_body + 340
      17  libsystem_pthread.dylib       	0x00007fff60d8450d _pthread_start + 377
      18  libsystem_pthread.dylib       	0x00007fff60d83bf9 thread_start + 13
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tjenssen Tim Jenssen
            tjenssen Tim Jenssen
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes